# reminiscence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  benchmark_compression_direct.csv  diagnose_flight.py  pyproject.toml  test_cli_detection.py
.github/workflows/: create-pr.yml  publish-github-pages.yml  publish.yml  validation.yml
benchmarks/: compression.py  encryption.py
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/assets/: logo.svg.backup
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: configuration.md  core-operations.md  data-types.md  decorators.md
docs/src/content/docs/concepts/: how-it-works.md  hybrid-caching.md  semantic-matching.md
docs/src/content/docs/dual-plane/: flight-dataplane.mdx  grpc-api.mdx  grpc-server.mdx  overview.mdx
docs/src/content/docs/examples/: grpc-microservices.md  llm-apps.md  multi-agent.md  rag.md
docs/src/content/docs/getting-started/: installation.mdx  quick-start.md  quick-start.mdx
docs/src/content/docs/guides/: background-tasks.md  basic-usage.mdx  configuration.md  decorators.md
docs/src/content/docs/production/: best-practices.md  health-checks.md  opentelemetry.md  performance.md
docs/src/content/docs/reference/: api.md  config.md  data-types.md  metrics.md  storage-architecture.md
docs/src/styles/: custom.css
docs_backup/: mkdocs.yml
docs_backup/javascripts/: extra.js
docs_backup/stylesheets/: extra.css
examples/: benchmark_using_claude.py  cache_basic_usage.py  cache_decorator.py  cache_production.py  dual_plane_architecture.py  example_scheduler.py  reminiscence-dev.yaml  reminiscence-prod.yaml  reminiscence.yaml  sample_claude.py  sample_fake_llm.py  sample_otel_integration.py  test_otel_debug.py  test_otel_export_direct.py
reminiscence/: __init__.py  __main__.py  cache.py  config.py  core.py  decorators.py  scheduler.py  types.py
reminiscence/api/: __init__.py  client.py  flight_server.py  reminiscence.proto  reminiscence_pb2.py  reminiscence_pb2.pyi  reminiscence_pb2_grpc.py  server.py
reminiscence/compression/: __init__.py  base.py  factory.py  gzip.py  zstd.py
reminiscence/embeddings/: __init__.py  base.py  fastembed.py  model_registry.py  models.yaml  models.yml  sentence_transformers.py
reminiscence/encryption/: __init__.py  age.py  base.py
reminiscence/eviction/: __init__.py  base.py  fifo.py  lfu.py  lru.py
reminiscence/metrics/: __init__.py  exporters.py  tracker.py
reminiscence/operations/: __init__.py  invalidation.py  lookup.py  maintenance.py  storage_ops.py  store.py
reminiscence/serialization/: __init__.py  base.py  pipeline.py  serializer.py
reminiscence/storage/: __init__.py  base.py  converters.py  lancedb.py
reminiscence/storage/lancedb/: __init__.py  backend.py  deletion.py  indexing.py  search.py
reminiscence/utils/: __init__.py  fingerprint.py  logging.py  query_detection.py  serde.py
src/: __init__.py  cache.py  config.py  core.py  decorators.py  metrics.py  scheduler.py  types.py
src/embeddings/: __init__.py
src/eviction/: fifo.py
src/examples/: basic_usage.py  benchmark_cpu_vs_gpu.py  cache_decorator.py  cache_multiagent.py  cache_production.py  diagnostics.py
src/metrics/: exporters.py  tracker.py
src/storage/: lancedb.py
src/utils/: README.md  __init__.py  embeddings.py  fingerprint.py  hashing.py  logging.py  serialization.py
tests/: conftest.py  pytest.ini  test_cache.py  test_concurrency.py  test_config.py  test_core.py  test_decorators.py  test_embeddings.py  test_encryption.py  test_error_handling.py  test_fingerprint.py  test_flight_dataplane.py  test_grpc_api.py  test_integration.py  test_logging.py  test_logging_json.py  test_logging_text.py  test_metrics.py  test_query_modes.py  test_scheduler.py  test_storage.py  test_utils_embeddings.py  test_utils_fingerprint.py  test_utils_hashing.py  test_utils_serialization.py  test_yaml_config.py
