[project]
name = "reminiscence"
version = "0.1.0"
description = "Semantic caching for LLMs"
authors = [{ name = "Juan José de las Heras Herrera" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.25.1",
    "orjson>=3.11.3",
    "pyarrow>=21.0.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]

fastembed = ["fastembed>=0.3.0"]

torch-cpu = ["sentence-transformers>=5.1.1"]

torch-cuda = ["sentence-transformers>=5.1.1", "torch>=2.0.0"]

dataframes = ["pandas>=2.0.0", "polars>=0.19.0"]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "fastembed>=0.3.0",
    "pandas>=2.0.0",
]

full = [
    "fastembed>=0.3.0",
    "sentence-transformers>=5.1.1",
    "pandas>=2.0.0",
    "polars>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reminiscence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
